Verion 0.9.44dev (?? ??? 2004)
  - Added patch 980287: added mysqli support to php-dbi.php
  - Fixed bug 966948: single quotes not working in passwords if magic
    quotes is on.
  - Fixed bug 950185: remove spaces between multiple addresses in mailto URL
    for view entry page
  - Fixed bug 960793: purge (Delete events) only worked with MySQL.
  - Fixed bug 949287: Finnish was missing from config.php.
  - Patch 972689: use preferences for example month date format in pref.php
  - Patch 975785: admin.php was not showing language setting properly
  - Patch 975554: event end time as an option (rather than just duration)
  - Patch 972695: in edit_entry.php, use preferences to determine
    if repeat info starts on sun/mon
  - Patch 972602: Missing translation in pref.php for language
  - Patch 972687: Fixed untranslated text in purge.php
  - Added patch 972688: attempt to translate language names ("English")
    into other languages.  Updated config.php to have comments for
    perl language tools (update_translation.pl).
  - Changed popup color palette to web safe colors 
  - Fixed bug 885181: If a user adds an event to a nonuser calendar,
    the admin of that nonuser admin calendar must be able to approve
    the event (if approvals are required).
  - Allow admin users to import events into other user's calendars.
  - Patch 931248: Mishandled single quotes in event name/description when
    overriding a conflict.
  - Fixed bug 929977: site_extras not showing up in event popups when enabled
  - Updated purge.php to not use '<?' and always use '<?php' instead.
  - Added support for repeating events in iCal import
  - Fixed bug 923129: Used "unnamed view" for views without a name
    so user can edit/delete the view.
  - Updated README.html to not assume user has downloaded user manual.
    Instead link to the download area on SourceForge.
  - Fixed bug 903285: PHP balise problem <? ?>
    (fixed for view_d.php, didn't check all files)